--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <!-- QUERO QUE FAÇA TODA A ESTRUTURA DE COMPARTILHAMENTO POR REDES SOCIAIS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Pedro Fernandes</title>
     <meta name="description" content="Portfólio de design gráfico e desenvolvimento web de Pedro Fernandes.">
     <meta property="og:title" content="Portfólio de Pedro Fernandes">
     <meta property="og:description" content="Portfólio de design gráfico e desenvolvimento web de Pedro Fernandes.">
-    <meta property="og:image" content="caminho/para/sua/foto.jpg">
+    <meta property="og:image" content="imgs/portfolio-pedro-fernandes-thumb.jpg">
     <meta property="og:url" content="URL do seu portfólio">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Portfólio de Pedro Fernandes">
     <meta name="twitter:description" content="Portfólio de design gráfico e desenvolvimento web de Pedro Fernandes.">
-    <meta name="twitter:image" content="caminho/para/sua/foto.jpg">
+    <meta name="twitter:image" content="imgs/portfolio-pedro-fernandes-thumb.jpg">
     <link type="text/css" rel="stylesheet" href="css/layout.css">
+    <link rel="shortcut icon" href="imgs/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <div class="portfolio">
         <div class="container">
@@ -41,22 +39,19 @@
             </div>
         </div>
         <div class="detalhes">
-            <!-- ISSO SERA FEITO DINAMICAMENTE EM JAVASCRIPT, FAREMOS MAIS TARDE -->
             <span class="onde">Salvador - Bahia - Brasil</span>
-            <span class="whatsapp">WhatsApp</span>
-            <span class="email">E-mail</span>
+            <a href="https://api.whatsapp.com/send?phone=5571992541363&text=Ol%C3%A1.%20Vi%20seu%20portf%C3%B3lio%20e%20estou%20entrando%20em%20contato.%20https%3A%2F%2Fpedrofrn.github.io%2Fsoma-ou-subtrai%2F" target="_blank"><span class="whatsapp">WhatsApp</span></a>
+            <a href="mailto:pedrofrn@gmail.com"><span class="email">E-mail</span></a>
         </div>
-
     </header>
     <main>
         <div class="trabalhos"></div>
     </main>
     <footer>
         <div>
-            <span class="credito">Feito por <strong>Pedro Fernandes</strong></span>
+            <span class="credito">Página desenvolvida por <strong>Pedro Fernandes</strong></span>
         </div>
     </footer>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
-
 </html>
