corrigindo link whatsapp

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="detalhes">
             <span class="onde">Salvador - Bahia - Brasil</span>
-            <a href="https://api.whatsapp.com/send?phone=5571992541363&text=Ol%C3%A1.%20Vi%20seu%20portf%C3%B3lio%20e%20estou%20entrando%20em%20contato.%20https%3A%2F%2Fpedrofrn.github.io%2Fsoma-ou-subtrai%2F" target="_blank"><span class="whatsapp">WhatsApp</span></a>
+            <a href="https://api.whatsapp.com/send?phone=5571992541363&text=Ol%C3%A1.%20Vi%20seu%20portf%C3%B3lio%20e%20estou%20entrando%20em%20contato.%20https%3A%2F%2Fpedrofrn.github.io%2FportfolioPedro%2F" target="_blank"><span class="whatsapp">WhatsApp</span></a>
             <a href="mailto:pedrofrn@gmail.com"><span class="email">E-mail</span></a>
         </div>
     </header>
