melhorias visuais e animações no portfólio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#212851">
     <title>Portfólio de Pedro Fernandes</title>
     <meta name="description" content="Portfólio de design gráfico e desenvolvimento web de Pedro Fernandes.">
     <meta property="og:title" content="Portfólio de Pedro Fernandes">
