--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <div class="portfolio">
         <div class="container">
             <div class="nome">Portfólio</div>
-            <div class="data"></div>
+            <div style="display: flex; gap: 15px; align-items: center;">
+                <span id="theme-toggle" style="cursor: pointer; font-size: 1.2em;" title="Alternar Tema">🌙</span>
+                <div class="data"></div>
+            </div>
         </div>
     </div>
     <header>
